# nicegui-template

./: .gitignore  .pylintrc  AGENT.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  copier.yml  mypy.ini  nicegui-template.code-workspace  py-versions.jinja  pyproject.toml  pytest.ini  requirements-locked.txt  requirements.txt  ruff.toml
.cursor/: rules
.cursor/commands/: explain.md  review-branch.md  review-uncommitted.md  simplify.md  summarize.md
.cursor/rules/: general.mdc
.github/: copilot-instructions.md
.github/workflows/: test.yml
helpers/: __init__.py  testing.py
template/: .gitignore  Makefile  Makefile.jinja  README.md.jinja  main.py.jinja  pyproject.toml.jinja  {% if include_ai_instructions %}AGENT.md{% endif %}.jinja  {% if include_ai_instructions %}AGENTS.md{% endif %}.jinja  {% if include_contributing %}CONTRIBUTING.md{% endif %}.jinja  {% if include_contributing or include_ai_instructions %}CONTRIBUTING.md{% endif %}.jinja  {% if not use_poetry %}requirements-dev.txt{% endif %}  {% if not use_poetry %}requirements-dev.txt{% endif %}.jinja  {% if not use_poetry %}requirements.txt{% endif %}.jinja  {% if use_pip %}requirements-dev.txt{% endif %}.jinja  {% if use_pip %}requirements.txt{% endif %}.jinja  {% if use_precommit %}.pre-commit-config.yaml{% endif %}  {% if use_precommit %}.pre-commit-config.yaml{% endif %}.jinja  {{project_name}}.code-workspace
template/.github/workflows/: test.yml.jinja
template/tests/: test_true.py
template/{% if include_ai_instructions %}.cursor{% endif %}/: rules.jinja
template/{% if include_ai_instructions %}.cursor{% endif %}/commands/: explain.md.jinja  review-branch.md.jinja  review-uncommitted.md.jinja  simplify.md.jinja  summarize-branch.md.jinja
template/{% if include_ai_instructions %}.cursor{% endif %}/rules/: general.mdc
template/{% if include_ai_instructions %}.github{% endif %}/: {% if include_ai_instructions %}copilot-instructions.md{% endif %}.jinja
template/{{module_name}}/: {% if use_rosys %}system.py{% endif %}.jinja
template/{{project_name}}/: main.py.jinja  {{module_name}}.py.jinja
tests/: conftest.py  test_code_checkers.py  test_create.py  test_mypy.py  test_pylint.py  test_pytest.py  test_ruff.py
